--- a/index.html
+++ b/index.html
@@ -2,7 +2,7 @@
 <html lang="es">
 
 <head> 
-  <title> Ptimer encabezado Poronga </title>
+  <title> Primer encabezado Poronga </title>
   <link rel="preconnect" href="https://fonts.googleapis.com">
   <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
   <link href="https://fonts.googleapis.com/css2?family=Explora&display=swap" rel="stylesheet">
